<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_lt_background"
    tools:context=".SendActivity">

    <TextView
        android:id="@+id/user_id_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/message_progress"
        android:layout_marginStart="24dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:text="@string/send_text_view" />

    <EditText
        android:id="@+id/message_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="102dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/send_hint"
        android:inputType="textPersonName|textCapSentences|textMultiLine"
        android:padding="16dp" />

    <Button
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_btn"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:text="@string/send_button" />

    <ProgressBar
        android:id="@+id/message_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:indeterminate="true"
        android:visibility="invisible" />


</RelativeLayout>